--- a/2CT_FCVinfo/public/index.html
+++ b/2CT_FCVinfo/public/index.html
@@ -30,7 +30,8 @@
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCK1umacdk4YP_IfhDO_9imcUNzAqsU9qc&language=ja">
+  <script src=process.env.MAP_POINT>
+    require('dotenv').config();
   </script>
   <title>masaru</title>
 </head>
