add dotenv test code

--- a/2CT_FCVinfo/public/index.html
+++ b/2CT_FCVinfo/public/index.html
@@ -30,7 +30,7 @@
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <script src=process.env.MAP_POINT>
+  <script src=`${process.env.MAP_POINT}`>
     require('dotenv').config();
   </script>
   <title>masaru</title>
@@ -52,7 +52,7 @@
   <div id="bpp"></div>
 
   <footer style="background-color: #303535; text-align: center;">
-    <a type="button" data-toggle="modal" data-target="#Commentary" style="color: #ededed;" href="#">データグラフ</a>
+    <a type="button" data-toggle="modal" data-target="#Commentary" style="color: #ededed;" href="./chartGraf.html">データグラフ</a>
     <p class="my-0" style="text-align: right; color: #ededed;">商用ZEV基盤開発部 2TW</p>
   </footer>
 
