retry build so make new dist file check depory

--- a/2CT_FCVinfo/public/index.html
+++ b/2CT_FCVinfo/public/index.html
@@ -30,9 +30,9 @@
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <script src=`${process.env.MAP_POINT}`>
+  <!-- <script src=`${process.env.MAP_POINT}`>
     require('dotenv').config();
-  </script>
+  </script> -->
   <title>masaru</title>
 </head>
 
