--- a/2CT_FCVinfo/public/chartGraf.html
+++ b/2CT_FCVinfo/public/chartGraf.html
@@ -8,12 +8,12 @@
     <title>dataChart</title>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react-dom.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react-dom.js"></script> -->
 </head>
 
 <body>
-    <script src="./getChartData.js"></script>
+    <!-- <script src="../src/assets/getChartData.js"></script> -->
 
     <div>
         <input id="getnum" type="range" min="1" max="30"> <label for="getnum" id="getnumResult">スライダーで回帰直線追加</label>
@@ -25,8 +25,30 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
-        let sliderNum_gr = 0;
 
+        async function sampleResolve() {
+            // console.log(process.env.VUE_AWS_CHARTPOINT)
+            try {
+                const response = await fetch(`https://vccdg94894.execute-api.ap-northeast-1.amazonaws.com/from_DB_to_webChart_STAGE/?getNum=30`, {
+                    method: "GET",
+                    mode: 'cors'
+                });
+                if (response.ok) {
+                    const resJson = await response.json();
+                    // return JSON.stringify(resJson);
+                    return resJson
+                } else {
+                    throw new Error('Network response was not ok.');
+                }
+            } catch (error) {
+                console.error(error);
+            }
+        };
+
+        sampleResolve()
+
+
+        let sliderNum_gr = 0;
         let resultdata;
         const scatterDataArr = [];
         const chartData2 = sampleResolve().then((getChartData) => {
